--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - 2.7
+  - 3.6
 
 # Used old infrastructure, needed for integration tests:
 # http://docs.travis-ci.com/user/workers/standard-infrastructure/
@@ -18,8 +18,8 @@ cache:
     - $HOME/.cache/pip/
 
 install:
-  - sudo -H pip install tox
-  - sudo -H pip install --upgrade pip
+  - pip install --upgrade pip
+  - pip install tox
   - if [ ${TASK} = 'integration' ]; then sudo -E ./scripts/travis/prepare-integration.sh; fi
 
 script:
