--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py36,lint
+envlist = py27,py36,py38,lint
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
@@ -11,6 +11,10 @@ commands = python setup.py test
 
 [testenv:py36]
 basepython = python3.6
+commands = python setup.py test
+
+[testenv:py38]
+basepython = python3.8
 commands = python setup.py test
 
 [testenv:lint]
