--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,21 @@
 [tox]
-envlist = py27,py36,py38,lint
+envlist = py38,py39,py310,py311,lint
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-
-[testenv:py27]
-basepython = python2.7
-commands = python setup.py test
-
-[testenv:py36]
-basepython = python3.6
-commands = python setup.py test
+deps = -r{toxinidir}/test-requirements.txt
+commands = pytest
 
 [testenv:py38]
 basepython = python3.8
-commands = python setup.py test
+
+[testenv:py39]
+basepython = python3.9
+
+[testenv:py310]
+basepython = python3.10
+
+[testenv:py311]
+basepython = python3.11
 
 [testenv:lint]
 commands = flake8 --config ./lint-configs/python/.flake8 st2auth_pam_backend/
