make pytest more verbose

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py38,py39,py310,py311,lint
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
-commands = pytest
+commands = pytest -slv
 
 [testenv:py38]
 basepython = python3.8
