make pytest more verbose

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py38,py39,py310,py311,lint
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
-commands = pytest -slv
+commands = pytest -l --log-level=DEBUG --color=yes --show-capture=all
 
 [testenv:py38]
 basepython = python3.8
