--- a/.github/workflows/tox.yaml
+++ b/.github/workflows/tox.yaml
@@ -49,7 +49,7 @@ jobs:
       run: sudo -E ./scripts/prepare-integration.sh
 
     - name: Test
-      run: tox -e ${{ steps.tox-env.outputs.tox-env }}
+      run: sudo -- tox -e ${{ steps.tox-env.outputs.tox-env }}
 
   set_merge_ok:
     name: Set Merge OK
